--- a/JoylinkTools/mainwindow.ui
+++ b/JoylinkTools/mainwindow.ui
@@ -268,7 +268,7 @@
         <x>280</x>
         <y>80</y>
         <width>331</width>
-        <height>421</height>
+        <height>391</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -311,7 +311,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>stop</string>
+       <string>start</string>
       </property>
      </widget>
      <widget class="QGroupBox" name="groupBox">
@@ -1118,27 +1118,49 @@
         <x>630</x>
         <y>60</y>
         <width>151</width>
-        <height>181</height>
+        <height>71</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>微软雅黑</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(32, 110, 255)</string>
       </property>
      </widget>
      <widget class="QPlainTextEdit" name="GpsPlainTextEdit">
       <property name="geometry">
        <rect>
-        <x>830</x>
-        <y>60</y>
+        <x>840</x>
+        <y>0</y>
         <width>151</width>
-        <height>191</height>
+        <height>151</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>微软雅黑</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:rgb(229, 17, 73)</string>
       </property>
      </widget>
      <widget class="QGroupBox" name="groupBox_4">
       <property name="geometry">
        <rect>
-        <x>630</x>
-        <y>250</y>
-        <width>351</width>
-        <height>251</height>
+        <x>620</x>
+        <y>290</y>
+        <width>371</width>
+        <height>221</height>
        </rect>
       </property>
       <property name="font">
@@ -1220,8 +1242,8 @@
       <widget class="QPushButton" name="autoRtlPushButton">
        <property name="geometry">
         <rect>
-         <x>270</x>
-         <y>210</y>
+         <x>290</x>
+         <y>180</y>
          <width>81</width>
          <height>41</height>
         </rect>
@@ -1253,7 +1275,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>20</y>
+         <y>60</y>
          <width>51</width>
          <height>21</height>
         </rect>
@@ -1273,7 +1295,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>40</y>
+         <y>80</y>
          <width>71</width>
          <height>20</height>
         </rect>
@@ -1286,8 +1308,8 @@
        <property name="geometry">
         <rect>
          <x>80</x>
-         <y>40</y>
-         <width>31</width>
+         <y>80</y>
+         <width>21</width>
          <height>21</height>
         </rect>
        </property>
@@ -1305,8 +1327,8 @@
       <widget class="QPushButton" name="UpPushButton">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>180</y>
+         <x>0</x>
+         <y>150</y>
          <width>51</width>
          <height>31</height>
         </rect>
@@ -1318,14 +1340,337 @@
       <widget class="QPushButton" name="DownPushButton">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>210</y>
+         <x>0</x>
+         <y>180</y>
          <width>51</width>
          <height>31</height>
         </rect>
        </property>
        <property name="text">
         <string>下</string>
+       </property>
+      </widget>
+      <widget class="QTextEdit" name="HUDTextEdit">
+       <property name="geometry">
+        <rect>
+         <x>240</x>
+         <y>10</y>
+         <width>131</width>
+         <height>91</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>AcadEref</family>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(139, 0, 0)</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="compassHealthyLabel">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>20</y>
+         <width>191</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(145, 0, 0)</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QLabel" name="commandAckLabel">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>480</y>
+        <width>331</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Consolas</family>
+        <pointsize>11</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(190, 11, 59)</string>
+      </property>
+      <property name="text">
+       <string>指令应答：</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>50</y>
+        <width>61</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(166, 16, 76)</string>
+      </property>
+      <property name="text">
+       <string>刷新串口</string>
+      </property>
+     </widget>
+     <widget class="QGroupBox" name="groupBox_5">
+      <property name="geometry">
+       <rect>
+        <x>610</x>
+        <y>140</y>
+        <width>381</width>
+        <height>151</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="title">
+       <string>磁罗盘校准</string>
+      </property>
+      <widget class="QPlainTextEdit" name="compassId1OffPlainTextEdit">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>50</y>
+         <width>181</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>微软雅黑</family>
+         <pointsize>8</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(32, 110, 255)</string>
+       </property>
+      </widget>
+      <widget class="QProgressBar" name="compassCalId2ProgressBar">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>90</y>
+         <width>151</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+      <widget class="QProgressBar" name="compassCalId1ProgressBar">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>60</y>
+         <width>151</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="compassCalButton">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>20</y>
+         <width>111</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Consolas</family>
+         <pointsize>12</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(170, 0, 0)</string>
+       </property>
+       <property name="text">
+        <string>Compass CAL</string>
+       </property>
+      </widget>
+      <widget class="QWidget" name="horizontalLayoutWidget_8">
+       <property name="geometry">
+        <rect>
+         <x>130</x>
+         <y>20</y>
+         <width>125</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QRadioButton" name="compassAllRadioButton">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>ALL</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="compassExtraRadioButton">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>Extra</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QLabel" name="label_11">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>60</y>
+         <width>21</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>ID1</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_12">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>90</y>
+         <width>21</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>ID2</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_10">
+       <property name="geometry">
+        <rect>
+         <x>280</x>
+         <y>20</y>
+         <width>71</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(113, 0, 0)</string>
+       </property>
+       <property name="text">
+        <string>板上校准</string>
+       </property>
+      </widget>
+      <widget class="QPlainTextEdit" name="compassId2OffPlainTextEdit">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>100</y>
+         <width>181</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>微软雅黑</family>
+         <pointsize>8</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(32, 110, 255)</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="saveCompassCalPushButton">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>120</y>
+         <width>75</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(139, 0, 0)</string>
+       </property>
+       <property name="text">
+        <string>保存校准</string>
        </property>
       </widget>
      </widget>
