--- a/JoylinkTools/mainwindow.ui
+++ b/JoylinkTools/mainwindow.ui
@@ -1385,6 +1385,65 @@
         <string/>
        </property>
       </widget>
+      <widget class="QLineEdit" name="yawAgleLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>180</y>
+         <width>71</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_13">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>160</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>角度</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_14">
+       <property name="geometry">
+        <rect>
+         <x>240</x>
+         <y>160</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>速度</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="yawAgleRateLineEdit">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>180</y>
+         <width>61</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="yawControlPushButton">
+       <property name="geometry">
+        <rect>
+         <x>310</x>
+         <y>110</y>
+         <width>51</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>航向</string>
+       </property>
+      </widget>
      </widget>
      <widget class="QLabel" name="commandAckLabel">
       <property name="geometry">
